[package]
name = "aoc_2022_rust"
version = "0.1.0"
authors = ["Philipp Bandow <bandow@formulastudent.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0"
aoc-runner-derive = "0"
cargo-aoc = "0"
itertools = "0"
regex ="1"
countmap = "0"
itermore = "0"
nalgebra = "0"
statistical = "1"
pathfinding = "3"
hex = "0"
scan_fmt = "0"
glam = "0"
range-ext = "0"